stylesheets/styles.less
* {
  font-family: "Soleil", Helvetica, Arial, sans-serif !important;
}

.masthead {
  background: #ebeae8;
  
  .row {
    height: auto;
    position: relative;
    padding: 155px;
  }
  
  .image {
    text-align: center;
  }

  img {
    width: 100%;
    height: 100%;
    max-width: 200px;
    border-radius: 100%;
    margin: 0 auto;
  }
  
  h1, p {
    color: #6e685f;
    font-weight: bold;
  }
  
  h1 {
    margin-top: 2em;
    font-size: 28px;
    color: darken(#6e685f, 20%);
    text-transform: uppercase;
  }
  
  p {
    font-size: 22px;
  }

  navigation {
    ul {
      position: fixed;
      right: 0;
      padding: 30px 30px 15px 30px;
      list-style: none;
      font-size: 15px;
      font-weight: bold;
      margin-top: -40px;
      //background: rgba(255,255,255,0.3);
      li {
        a {
          color: #6e685f;
          display: block;
          margin-bottom: 15px;
        } 
        &.active {
          a {
            color: #d70113;
          }
        }
      }  
    }
  }
}

section {
  
  padding: 155px 0;
  font-weight: bold;
  
  &#prologue {
    p {
      font-size: 25px;
    }
  }
  
  p {
    color: #9b968e;
    font-size: 20px;
  }

  strong {
    color: #56524b;
  }

  h2 {
    color: #6e685f;
    text-align: center;
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 2em;
  }
}

.odd {
  background: #ebeae8;
}

#service {
  ul, li {
    margin: 0;
    padding: 0;
    list-style: none;
    font-size: 20px;
  }

  h3 {
    font-weight: bold;
    margin-right: 10px;
  }

  .websites, .uid, .webapps {
    color: #ebeae8;
    background: #777168;
    padding: 20px;
  }
}

#development {
  ul, li {
    margin: 0;
    padding: 0;
    list-style: none;
    font-size: 20px;
  }
  
  li li {
    color: #9b968e;
  }

  h3 {
    font-weight: bold;
    margin-right: 10px;
  }

  .frontend {
    color: #ebeae8;
    background: #777168 url(/images/frontend.png) 15px 10px no-repeat;
    padding: 20px 20px 20px 75px;
  } 
  
  .backend {
    color: #ebeae8;
    background: #777168 url(/images/backend.png) 15px 10px no-repeat;
    padding: 20px 20px 20px 75px;
  } 
  
  .infrastructure {
    color: #ebeae8;
    background: #777168 url(/images/infrastructure.png) 15px 10px no-repeat;
    padding: 20px 20px 20px 75px;
  } 
}

.spacer {
  padding-top: 155px;
}

.tiny_spacer {
  padding-top: 35px;
}

#usability {
  img {
    margin-top: 5px;
    border: 3px solid #5b5751;
    padding: 1px;
  
    &.negative {
      border-color: #a20b00;
    }
  
    &.positive {
      border-color: #488412;
    }
  }
  
  li {
    font-size: 20px;
    color: #9b968e;
  }
} 

#contact {
  ul {
    list-style: none;
    width: 420px;
    margin: 0 auto;
    height: 10px;
    padding: 0;
  }
  
  li {
    float: left;
    margin: 0 5px 0 5px;
    padding: 0;
      display:block;
      height: 60px;
      width: 60px;
  }
  
  li {
    a {
      display:block;
      height: 60px;
      width: 60px;
      background: #ebeae8 url(/images/social.png) 0 0 no-repeat;
      border-radius: 30px;
    
      &:hover {
        background-color: #fff;
      }
    }
  }
  
  .facebook {
    background-position: -60px 0;
  }
  .github {
    background-position: -120px 0;
  }
  .google {
    background-position: -180px 0;
  }
  .linkedin {
    background-position: -240px 0;
  }
  .skype {
    background-position: -300px 0;
  }
}

